test/Fail/NonUniqueInstance2.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  Resolve instance argument _9 : m < n
  Candidates
    _ : m < n
    <-suc : {m = m₁ : Nat} {n = n₁ : Nat} ⦃ _ : m₁ < n₁ ⦄ → m₁ < suc n₁
    (stuck)

NonUniqueInstance2.agda:16.27-39: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  NonUniqueInstance2.agda:16.27-39
